Source/WebKit2/Shared/ShareableBitmap.h
@@ -93,10 +93,10 @@ public:
     static PassRefPtr<ShareableBitmap> create(const WebCore::IntSize&, Flags, PassRefPtr<SharedMemory>);
 
     // Create a shareable bitmap from a handle.
-    static PassRefPtr<ShareableBitmap> create(const Handle&);
+    static PassRefPtr<ShareableBitmap> create(const Handle&, SharedMemory::Protection = SharedMemory::ReadWrite);
 
     // Create a handle.
-    bool createHandle(Handle&);
+    bool createHandle(Handle&, SharedMemory::Protection = SharedMemory::ReadWrite);
 
     ~ShareableBitmap();
 
